# csl-tools

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  demo.md  overview.md  plan.md  review-axis1-help-errors-disclosure.md  review-axis2-output-exitcodes-composability.md  review-axis3-input-robustness-futureproofing.md  review-post-refactor-cli-compliance.md  review-post-refactor-code-quality.md  review-post-refactor-test-coverage.md
docs/: issue-citation-grouping.md  plan-citation-grouping.md  plan.md
exemples/crispr-gene-editing-therapy/: README.md  article.md  article_advanced.md  output.md  output_advanced_radiology.md  output_radiology.md  refs.jsonl
exemples/fes_pet/: article.md  jnm.csl  output.md  refs.jsonl
src/: lib.rs  main.rs  markdown.rs  output.rs  processor.rs  refs.rs  skill.md  style.rs
tests/: bibliography_formatting.rs  citation_grouping.rs  cli.rs  integration.rs
tests/common/: mod.rs
tests/fixtures/errors/: invalid_json.toml  missing_ref.toml
tests/fixtures/integration/: basic_citation.toml  multiple_citations.toml
tests/fixtures/parsing/: pmid_format.toml  simple.toml  with_doi.toml  with_locator.toml  with_range.toml
tests/styles/: minimal.csl
